--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -17,25 +17,24 @@ editor_options:
 <img src="https://joonsukkang.github.io/mf/figure/rank1_setup.Rmd/unnamed-chunk-7-1.png" width="400">
 :::
 ::: {}
-
 + the rank-1 problem: [rank1_setup](rank1_setup.html)
   + The rank-1 problem is stated and the previous and a few additional analyses are shown.
-
 :::
 ::::
 
 :::: {style="display: flex;"}
 ::: {style="min-width: 300px; max-width: 300px"}
-<img src="https://joonsukkang.github.io/mf/figure/demo_toy.Rmd/unnamed-chunk-8-1.png" width="400">
+<img src="https://joonsukkang.github.io/mf/figure/demo2_toy.Rmd/unnamed-chunk-7-1.png" width="400">
 :::
 ::: {}
-
-+ demo version: [demo_toy](demo_toy.html)
-  + The demo version of the integrate f out method is applied to the toy data.
-
++ demo version 2: [demo2_toy](demo2_toy.html)
+  + The model is fitted with a fixed sparse binary prior (for $w$) setting.
+  + A grid of the binary values (a value close to zero and a large value) are explored.
+  + This shows that there exist settings in which the method works.
++ archive
+  + [demo_toy](demo_toy.html) with general discrete prior
 :::
 ::::
-
 
 
 ## miscellaneous
