--- a/analysis/demo2_toy.Rmd
+++ b/analysis/demo2_toy.Rmd
@@ -160,7 +160,7 @@ demo.update.A <- function(mat.X, sigmasq, delta, Ew.inv){
 
 
 # leg B: update w (essentially, pi_q) and g (essentially, Ew.inv)
-demo.update.B <- function(mat.X, Elsq, pi, sigmasq.grid, niter.wg = 10){
+demo.update.B <- function(mat.X, Elsq, pi, sigmasq.grid, niter.wg = 10, update_pi=TRUE){
     # input: Elsq, pi; sigmasq.grid, niter.wg
     # output: pi, pi_q Ew.inv
   
@@ -173,7 +173,7 @@ demo.update.B <- function(mat.X, Elsq, pi, sigmasq.grid, niter.wg = 10){
       pi_q[i,] <- pi*sigmasq.grid^(-0.5)*exp(-Elsq[i]/(2*sigmasq.grid))
       pi_q[i,] <- pi_q[i,]/sum(pi_q[i,])
     }
-    pi <- colSums(pi_q)/N
+    if(update_pi==TRUE){pi <- colSums(pi_q)/N}
     }
     
     Ew.inv <- vector(mode='numeric', length=N)
@@ -212,7 +212,8 @@ demo.elbo <- function(mat.X, N,P,
 
 ```{r}
 demo.fit <- function(mat.X, niter, print.elbo=TRUE, warmstart.l=NA,
-                     binary_small=10^(-15), binary_big=10^15, prob_small=0.5 # (prob_big=1-prob_small)
+                     binary_small=10^(-15), binary_big=10^15, prob_small=0.5, # (prob_big=1-prob_small)
+                     update_pi=TRUE
                      ){
   
     N <- nrow(mat.X)
@@ -249,7 +250,8 @@ demo.fit <- function(mat.X, niter, print.elbo=TRUE, warmstart.l=NA,
     temp.B <- demo.update.B(mat.X,
                           Elsq=Elsq,
                           pi=pi,
-                          sigmasq.grid=sigmasq.grid)
+                          sigmasq.grid=sigmasq.grid,
+                          update_pi=update_pi)
     pi <- temp.B$pi
     pi_q <- temp.B$pi_q
     Ew.inv <- temp.B$Ew.inv
@@ -285,16 +287,12 @@ demo.fit <- function(mat.X, niter, print.elbo=TRUE, warmstart.l=NA,
 
 
 
-## Demo Analysis
+## Recap: the flash/svd fit for the rank-1 problem
 
 ```{r}
 library(tidyverse)
 library(flashr)
-```
 
-### Recap: the flash/svd fit for the rank-1 problem
-
-```{r}
 # flash fit: restricted to rank-1
 X2.flash1 = flashr::flash(X2,1,ebnm_fn = list(l="ebnm_pn", f="ebnm_ash"),var_type = "constant", verbose=FALSE)
 X2n_a.flash1 = flashr::flash(X2n_a,1,ebnm_fn = list(l="ebnm_pn", f="ebnm_ash"),var_type = "constant", verbose=FALSE)
@@ -328,6 +326,10 @@ X2.fit1 %>%
   ggtitle("The Rank-1 Problem")
 ```
 
+## Demo Analysis: without updating prior distribution
+
+Do not update `pi` parameter. It's fixed at (0.5, 0.5).
+
 ### Analysis for the noiseless data `X2`
 
 ```{r, fig.height = 8, fig.width = 10}
@@ -349,7 +351,8 @@ for (i in 1:length(bin0.grid)){
           bin0 <- bin0.grid[i]
           bin1 <- bin1.grid[j]
 
-           X2.fit    <- demo.fit(X2, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1)
+           X2.fit    <- demo.fit(X2, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1, 
+                                 update_pi=FALSE)
            df.result <- rbind(df.result,
                           data.frame(l=X2.fit$u1,
                                      idx=1:80, bin0 = bin0, bin1=bin1, data="X2"))
@@ -373,8 +376,8 @@ df.elbo %>% filter(data=="X2") %>%
 ```
 
 
-### Analysis for the noiseless data `X2n_a` (hard) and `X2n_b` (easy)
 
+### Analysis for the noiseless data `X2n_a` (hard) and `X2n_b` (easy)
 
 ```{r, fig.height = 8, fig.width = 10}
 # sparse binary prior: =bin0 wp 0.5 and =bin1 wp 0.5
@@ -396,8 +399,8 @@ for (i in 1:length(bin0.grid)){
           bin0 <- bin0.grid[i]
           bin1 <- bin1.grid[j]
 
-           X2n_a.fit    <- demo.fit(X2n_a, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1)
-           X2n_b.fit    <- demo.fit(X2n_b, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1)
+           X2n_a.fit    <- demo.fit(X2n_a, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1, update_pi=FALSE)
+           X2n_b.fit    <- demo.fit(X2n_b, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1, update_pi=FALSE)
            df.result <- rbind(df.result,
                           data.frame(l=X2n_a.fit$u1,
                                      idx=1:80, bin0 = bin0, bin1=bin1, data="X2n_a (hard)"),
@@ -430,3 +433,118 @@ df.result %>% filter(data=="X2n_b (easy)") %>%
 df.elbo %>% filter(data=="X2n_b (easy)") %>%
   ggplot(aes(x=bin1, y=elbo, group=bin0, col=bin0))+geom_line()+geom_point(position="jitter")+scale_x_log10()
 ```
+
+
+
+## Demo Analysis: updating prior distribution
+
+Update `pi` parameter. The `pi` starts at (0.5, 0.5), and gets updated. 
+
+
+### Analysis for the noiseless data `X2`
+
+```{r, fig.height = 8, fig.width = 10}
+# sparse binary prior: =bin0 wp 0.5 and =bin1 wp 0.5
+summary((X2.svd$u[,1])^2)
+
+# bin0: essentially 0
+# bin1: a large value
+niter <- 5
+bin0.grid <- 10^c(-15,-10,-7,-5,-4,-3)
+bin1.grid <- 10^c(-2,-1,0,1,2,5,10,15)
+
+df.result <- data.frame()
+df.elbo <-data.frame()
+
+for (i in 1:length(bin0.grid)){
+  for (j in 1:length(bin1.grid)){
+
+          bin0 <- bin0.grid[i]
+          bin1 <- bin1.grid[j]
+
+           X2.fit    <- demo.fit(X2, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1,
+                                 update_pi=TRUE)
+           df.result <- rbind(df.result,
+                          data.frame(l=X2.fit$u1,
+                                     idx=1:80, bin0 = bin0, bin1=bin1, data="X2"))
+           df.elbo <- rbind(df.elbo,
+                            data.frame(elbo=c(last(X2.fit$elbo)),
+                                       data=c("X2"),
+                                       bin0=bin0, bin1=bin1))
+  }
+}
+
+df.result %>% mutate(bin0=factor(bin0), bin1=factor(bin1)) -> df.result
+df.elbo %>% mutate(bin0=factor(bin0)) -> df.elbo
+
+df.result %>% filter(data=="X2") %>%
+  ggplot()+geom_line(aes(x=idx, y=l))+geom_hline(yintercept=0, col='red', alpha=0.5)+
+  facet_grid(bin0~bin1, labeller='label_both', scales='free')+ggtitle("svd initialization + X2")
+```
+```{r}
+df.elbo %>% filter(data=="X2") %>%
+  ggplot(aes(x=bin1, y=elbo, group=bin0, col=bin0))+geom_line()+geom_point(position="jitter")+scale_x_log10()
+```
+
+
+
+
+### Analysis for the noiseless data `X2n_a` (hard) and `X2n_b` (easy)
+
+```{r, fig.height = 8, fig.width = 10}
+# sparse binary prior: =bin0 wp 0.5 and =bin1 wp 0.5
+summary((X2n_a.svd$u[,1])^2)
+summary((X2n_b.svd$u[,1])^2)
+
+# bin0: essentially 0
+# bin1: a large value
+niter <- 5
+bin0.grid <- 10^c(-15,-10,-7,-5,-4,-3)
+bin1.grid <- 10^c(-2,-1,0,1,2,5,10,15)
+
+df.result <- data.frame()
+df.elbo <-data.frame()
+
+for (i in 1:length(bin0.grid)){
+  for (j in 1:length(bin1.grid)){
+
+          bin0 <- bin0.grid[i]
+          bin1 <- bin1.grid[j]
+
+           X2n_a.fit    <- demo.fit(X2n_a, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1, update_pi=TRUE)
+           X2n_b.fit    <- demo.fit(X2n_b, niter=niter, print.elbo=FALSE, binary_small=bin0, binary_big=bin1, update_pi=TRUE)
+           df.result <- rbind(df.result,
+                          data.frame(l=X2n_a.fit$u1,
+                                     idx=1:80, bin0 = bin0, bin1=bin1, data="X2n_a (hard)"),
+                          data.frame(l=X2n_b.fit$u1,
+                                     idx=1:80, bin0 = bin0, bin1=bin1, data="X2n_b (easy)"))
+           df.elbo <- rbind(df.elbo,
+                            data.frame(elbo=c(last(X2n_a.fit$elbo), last(X2n_b.fit$elbo)),
+                                       data=c("X2n_a (hard)", "X2n_b (easy)"),
+                                       bin0=bin0, bin1=bin1))
+  }
+}
+
+df.result %>% mutate(bin0=factor(bin0), bin1=factor(bin1)) -> df.result
+df.elbo %>% mutate(bin0=factor(bin0)) -> df.elbo
+
+df.result %>% filter(data=="X2n_a (hard)") %>%
+  ggplot()+geom_line(aes(x=idx, y=l))+geom_hline(yintercept=0, col='red', alpha=0.5)+
+  facet_grid(bin0~bin1, labeller='label_both', scales='free')+ggtitle("svd initialization + X2n_a (hard)")
+```
+```{r}
+df.elbo %>% filter(data=="X2n_a (hard)") %>%
+  ggplot(aes(x=bin1, y=elbo, group=bin0, col=bin0))+geom_line()+geom_point(position="jitter")+scale_x_log10()
+```
+```{r, fig.height = 8, fig.width = 10}
+df.result %>% filter(data=="X2n_b (easy)") %>%
+  ggplot()+geom_line(aes(x=idx, y=l))+geom_hline(yintercept=0, col='red', alpha=0.5)+
+  facet_grid(bin0~bin1, labeller='label_both', scales='free')+ggtitle("svd initialization + X2n_b (easy)")
+```
+```{r}
+df.elbo %>% filter(data=="X2n_b (easy)") %>%
+  ggplot(aes(x=bin1, y=elbo, group=bin0, col=bin0))+geom_line()+geom_point(position="jitter")+scale_x_log10()
+```
+
+
+
