--- a/analysis/model_exp_prior.Rmd
+++ b/analysis/model_exp_prior.Rmd
@@ -1,13 +1,11 @@
 ---
 title: "The Model with Exponential Prior"
 author: "Joonsuk Kang"
-date: "2020-11-6"
+date: "2020-11-10"
 output: workflowr::wflow_html
 editor_options:
   chunk_output_type: console
 ---
-
-Here we implement the model with exponential prior: $g_l(w_i)=\exp(w_i|\frac{1}{\eta})$. 
  
 # Data
 
@@ -48,11 +46,7 @@ X2 <- t(X2)
 X2n_a <- t(X2n_a)
 X2n_b <- t(X2n_b)
 
-# svd
-X2.svd = svd(X2)
-X2n_a.svd = svd(X2n_a)
-X2n_b.svd = svd(X2n_b)
-rm(X)
+rm(X, X.svd, f, i, n, p)
 ```
 
 # Demo Functions
@@ -61,7 +55,7 @@ rm(X)
 
 ```{r}
 # initialization of l using svd
-demo.init.svd <- function(mat.X){
+demo.init.svd <- function(mat.X, r2){
       
     N <- nrow(mat.X)
     P <- ncol(mat.X)
@@ -69,10 +63,10 @@ demo.init.svd <- function(mat.X){
     mat.X.svd <- svd(mat.X)
     init.l <- mat.X.svd$u[,1]
     init.w <- init.l^2
-    init.eta <- mean(init.w)
+    init.eta <- r2/N
     
-    init.sigmasq <- c((norm(mat.X, type='f')^2-t(init.l)%*%mat.X%*%t(mat.X)%*%init.l)/((N-1)*P))
-    init.delta <- c((t(init.l)%*%mat.X%*%t(mat.X)%*%init.l)/(P*init.sigmasq)-1)
+    init.sigmasq <- c((norm(mat.X, type='f')^2-t(init.l)%*%mat.X%*%t(mat.X)%*%init.l)/((N+1)*P))
+    init.delta <- c((t(init.l)%*%mat.X%*%t(mat.X)%*%init.l)/(P*init.sigmasq*r2)-1)/r2
 
     init.Ew.inv <- 1/init.w
     
@@ -94,31 +88,31 @@ demo.init.svd <- function(mat.X){
 
 ```{r}
 # leg A: given w, update l (essentially, Sigma.star), sigmasq, delta
-demo.update.A <- function(mat.X, sigmasq, delta, Ew.inv){
+demo.update.A <- function(mat.X, sigmasq, delta, Ew.inv,r2){
     # input: mat.X; sigmasq, delta, Ew.inv, 
     # output: Sigma.star, Elsq, Elxxl; updated sigmasq, delta; u1 (first left singular vector of Y)
   
     N <- nrow(mat.X)
     P <- ncol(mat.X)
   
-    Y <- mat.X%*%t(mat.X)/(sigmasq*(1+1/delta)) - diag(x=Ew.inv)
+    Y <- mat.X%*%t(mat.X)/(sigmasq*(r2+1/delta)) - diag(x=Ew.inv)
     Y.eigen <- eigen(Y)
     
-    eval.expectation <- function(k){(sum(1/(k/(sigmasq*(1+1/delta))-Y.eigen$values))-1)^2}
+    eval.expectation <- function(k){(sum(1/(k/(sigmasq*(r2+1/delta))-Y.eigen$values))-r2)^2}
     find.k.star <- optimize(f=eval.expectation,
-                            interval = c((Y.eigen$values[1]+1)*sigmasq*(1+1/delta), (Y.eigen$values[1]+N)*sigmasq*(1+1/delta))
+                            interval = c((Y.eigen$values[1]+r2)*sigmasq*(r2+1/delta), (Y.eigen$values[1]+N)*sigmasq*(r2+1/delta))
                             )
     k.star <- find.k.star$minimum
   
-    d.tilde <- 1/(k.star/(sigmasq*(1+1/delta))-Y.eigen$values)
+    d.tilde <- 1/(k.star/(sigmasq*(r2+1/delta))-Y.eigen$values)
     Sigma.star <- Y.eigen$vectors %*% diag(x=d.tilde) %*% t(Y.eigen$vectors)
     log.det.Sigma.star <- sum(log(d.tilde))
 
     Elsq <- diag(Sigma.star)
     ElXXl <- sum(diag((t(mat.X) %*% Sigma.star %*% mat.X)))
     
-    sigmasq <- (norm(mat.X, type='f')^2-ElXXl/(1+1/delta))/(N*P)
-    delta <- max(ElXXl/(P*sigmasq)-1,10^(-10)) # lower bound at 10^(-10)
+    sigmasq <- (norm(mat.X, type='f')^2-ElXXl/(r2+1/delta))/(N*P)
+    delta <- max((ElXXl/(P*sigmasq*r2)-1)/r2,10^(-10)) # lower bound at 10^(-10)
     
     out.list = list()
     out.list$log.det.Sigma.star = log.det.Sigma.star
@@ -140,11 +134,9 @@ demo.update.B <- function(mat.X, Elsq, eta=eta, niter.updates = 10){
     for (i in 1:niter.updates){
     Ew <- sqrt(eta/2)*sqrt(Elsq)+(eta/2)
     Ew.inv <- sqrt(2/(eta*Elsq))
-    eta <- mean(Ew)
     }
     
     out.list = list()
-    out.list$eta = eta
     out.list$Ew.inv = Ew.inv
     
     return(out.list)
@@ -155,12 +147,12 @@ demo.update.B <- function(mat.X, Elsq, eta=eta, niter.updates = 10){
 ## initialization + updates
 
 ```{r}
-demo.fit <- function(mat.X, niter){
+demo.fit <- function(mat.X, niter, r2){
   
     N <- nrow(mat.X)
     P <- ncol(mat.X)
   
-    par.init <- demo.init.svd(mat.X) 
+    par.init <- demo.init.svd(mat.X, r2) 
                                                
     l <- par.init$l
     w <- par.init$w
@@ -174,7 +166,8 @@ demo.fit <- function(mat.X, niter){
     temp.A <- demo.update.A(mat.X,
                           sigmasq=sigmasq,
                           delta=delta,
-                          Ew.inv=Ew.inv)
+                          Ew.inv=Ew.inv,
+                          r2=r2)
     Sigma.star <- temp.A$Sigma.star
     log.det.Sigma.star <- temp.A$log.det.Sigma.star
     Elsq <- temp.A$Elsq
@@ -186,7 +179,6 @@ demo.fit <- function(mat.X, niter){
     temp.B <- demo.update.B(mat.X,
                           Elsq=Elsq,
                           eta=eta)
-    eta <- temp.B$eta
     Ew.inv <- temp.B$Ew.inv
     }
     
@@ -205,39 +197,198 @@ demo.fit <- function(mat.X, niter){
 ```
 
 
-# Analysis 
+
+# Analysis {.tabset .tabset-fade}
+
+
+## $r^2=1$ 
 
 ```{r, fig.height=5, fig.width=10}
 par(mfrow=c(1,2))
 
+setr2 <- 1
+
+
 # X2
 mat.X <- X2
-obj.fit    <- demo.fit(mat.X, niter=10) 
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
 plot(obj.fit$u1, ylab='fitted', main='fitted l')
 plot(x=svd(mat.X)$u[,1], y=obj.fit$u1,
      xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
 d.tilde <- eigen(obj.fit$Sigma.star)$values
-d.tilde
 sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
 
 # X2n_a hard
 mat.X <- X2n_a
-obj.fit    <- demo.fit(mat.X, niter=10) 
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
 plot(obj.fit$u1, ylab='fitted', main='fitted l')
 plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
      xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
 d.tilde <- eigen(obj.fit$Sigma.star)$values
-d.tilde
 sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
 
 # X2n_b easy
 mat.X <- X2n_b
-obj.fit    <- demo.fit(mat.X, niter=10) 
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
 plot(obj.fit$u1, ylab='fitted', main='fitted l')
 plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
      xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
 d.tilde <- eigen(obj.fit$Sigma.star)$values
-d.tilde
 sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
 
 ```
+
+
+## $r^2=1.5$ 
+
+```{r, fig.height=5, fig.width=10}
+par(mfrow=c(1,2))
+
+setr2 <- 1.5
+
+
+# X2
+mat.X <- X2
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1,
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_a hard
+mat.X <- X2n_a
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_b easy
+mat.X <- X2n_b
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+```
+
+
+## $r^2=2$ 
+
+```{r, fig.height=5, fig.width=10}
+par(mfrow=c(1,2))
+
+setr2 <- 2
+
+
+# X2
+mat.X <- X2
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1,
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_a hard
+mat.X <- X2n_a
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_b easy
+mat.X <- X2n_b
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+```
+
+
+## $r^2=2.5$ 
+
+```{r, fig.height=5, fig.width=10}
+par(mfrow=c(1,2))
+
+setr2 <- 2.5
+
+
+# X2
+mat.X <- X2
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1,
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_a hard
+mat.X <- X2n_a
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_b easy
+mat.X <- X2n_b
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+```
+
+
+## $r^2=3$ 
+
+```{r, fig.height=5, fig.width=10}
+par(mfrow=c(1,2))
+
+setr2 <- 3
+
+
+# X2
+mat.X <- X2
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1,
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_a hard
+mat.X <- X2n_a
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+# X2n_b easy
+mat.X <- X2n_b
+obj.fit    <- demo.fit(mat.X, r2=setr2, niter=10) 
+plot(obj.fit$u1, ylab='fitted', main='fitted l')
+plot(x=svd(mat.X)$u[,1], y=obj.fit$u1, 
+     xlab='singular vector', ylab='fitted', main='fitted vs singular vector'); abline(0,1)
+d.tilde <- eigen(obj.fit$Sigma.star)$values
+sum(d.tilde); 2*sum(d.tilde^2) # mean and variance of Z^TZ where Z \sim N(0,Sigma.star)
+
+```
+
+
+#
